# tool-crowding

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINDINGS.md  LICENSE  README.md  RESEARCH_DESIGN.md  RESULTS.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  maintainer_disclosure.yml
.github/workflows/: test.yml
design/: ADVERSARIAL_AUDIT.md  ANTHROPIC_HARNESS_LITERATURE.md  CACHING_MODES.md  CHART_LAYOUT.md  CODERAG_NSWEEP_SCOPE.md  FOUNDATION.md  MODEL_VERSIONS.md  PADDING_STRATEGY.md  PILOT_V0.md  PRE_REGISTRATION.md  QUERY_SET_HYGIENE.md  REPRODUCIBILITY.md  SERVER_POOL.md  TOOL_RESULT_CAP.md  fake_tool_corpus.jsonl  fake_tool_corpus.method.md
harness/: .gitignore  README.md  SPEC.md  pyproject.toml
harness/analysis/: README.md  plot_cost_path.py  plot_interaction.py
harness/analysis/probe_data/: PROVENANCE.md
harness/analysis/probe_data/ambiguity-only_n4-similar_ambiguous_code-retrieval/: trials.jsonl
harness/analysis/probe_data/count-null_n6-dissimilar_named_code-retrieval/: trials.jsonl
harness/analysis/probe_data/interaction_n4-similar_ambiguous_neutral/: trials.jsonl
harness/analysis/probe_data/similarity-null_n4-similar_named_code-retrieval/: trials.jsonl
harness/analysis/readers/: v1.py
harness/configs/: github-n6-gonogo.yaml  github-only-smoke.yaml  github-similar-probe.yaml  mve.yaml  nsweep-minimal.yaml  smoke-no-mcp.yaml  smoke-pipeline.yaml  smoke.yaml  stage1-factorial.yaml  wger-ambiguity-probe.yaml  wger-positive-control.yaml
harness/mining/: __init__.py  audit_ngrams.py  build_v1.py
harness/models/: embedder.bge-m3.json  embedder.json  embedder.voyage.json  endpoints.json
harness/pool/: _fake_corpus_stats.json  descriptions.json  gen_fake_corpus.py
harness/preflight/: __init__.py  _common.py  date_check.py  fivegram_check.py  license_check.py  per_repo_cap_check.py  repo_eligibility_check.py  run_all.py  tier_count_check.py  tokenizer_cache_check.py
harness/tasks/: _gen_stage1_factorial.py  _stage1_bodies.txt  github_smoke.jsonl  smoke.jsonl  stage1-factorial.jsonl  wger-ambiguity.jsonl
harness/tasks/v1/: README.md  tokenizer_cache.json  verification_report.md
harness/tcrun/: __init__.py  agent.py  cli.py  config.py  deepwiki_index.py  embedder.py  env.py  orchestrator.py  padding.py  preflight.py  results.py  retry.py  runner.py  seed.py  servers.py  servers_pinned.yaml  snapshot.py  tasks.py
harness/tcrun/oracles/: __init__.py  pass_v1.py
harness/tests/: __init__.py  conftest.py  test_agent.py  test_audit_ngrams.py  test_cli.py  test_config.py  test_deepwiki_index.py  test_embedder.py  test_env.py  test_orchestrator.py  test_orderings_knob.py  test_padding.py  test_pass_v1.py  test_preflight.py  test_preflight_hygiene.py  test_results.py  test_retry.py  test_runner.py  test_servers.py  test_snapshot.py  test_tasks.py  test_temperature_knob.py
notes/: abc-best-practices.md  coderag-bench.md  coir.md  livemcpbench.md  longfunceval-deep.md  mcp-universe.md  mcpverse-deep.md  ragmcp-100.md  silent-judge.md  swe-bench-illusion.md  swe-bench-pro.md
research/: candidate_repos.md  gap_diagnosis.md  landscape_function_calling.md  landscape_mcp_benchmarks.md  landscape_production_engineering.md  landscape_rag_distractor.md
