[project]
name = "tool-crowding"
version = "0.1.0"
description = "Pre-registered benchmark for discrimination interference in multi-MCP code retrieval"
authors = [
    {name = "Devanshu Chicholikar", email = "chicholkar.d@northeastern.edu"},
]
maintainers = [
    {name = "Devanshu Chicholikar", email = "chicholkar.d@northeastern.edu"},
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "mcp",
    "model-context-protocol",
    "benchmark",
    "tool-use",
    "code-retrieval",
    "agentic-ai",
    "llm-evaluation",
    "pre-registration",
    "discrimination-interference",
    "reproducibility",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/DevanshuNEU/tool-crowding"
Documentation = "https://github.com/DevanshuNEU/tool-crowding/blob/main/RESEARCH_DESIGN.md"
Repository = "https://github.com/DevanshuNEU/tool-crowding"
Issues = "https://github.com/DevanshuNEU/tool-crowding/issues"
Changelog = "https://github.com/DevanshuNEU/tool-crowding/blob/main/CHANGELOG.md"
"Pre-registration" = "https://github.com/DevanshuNEU/tool-crowding/blob/main/design/PRE_REGISTRATION.md"

dependencies = [
    "anthropic>=0.40",
    "typer>=0.12",
    "mcp>=0.9",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "tqdm>=4.66",
    "tenacity>=8.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.scripts]
tcrun = "tcrun.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tcrun", "tcrun.oracles"]

[tool.setuptools.package-data]
tcrun = ["servers_pinned.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
